@@ -104,8 +104,13 @@ mjb.MaxThreadsProcess=1
 # turn ON/OFF the language detection in the filename
 filename.scanner.language.detection=true
 
-# comma separated list of case-insensitive keywords to ignore in filenames
+# comma separated list of case-sensitive keywords to ignore in filenames
 filename.scanner.skip.keywords=LIMITED,DiAMOND,AXXO,PUKKA,iDHD,PROPER,REPACK,DSR,STV,UNRATED,RERIP,REMUX
+
+# comma separated list of case-insensitive key phrases to count as "movie versions"
+# the key phrases are also "dividers-insensitive": space in the phrase is the
+# place holder for any possible separator (such as dot, underline, minus, etc.)
+filename.movie.versions.keywords=directors cut,extended cut,final cut,remastered
 
 # comma-separated list of case-insensitive keywords to count as "sources"
 filename.scanner.source.keywords=HDTV,PDTV,DVDRip,DVDSCR,DSRip,CAM,R5,LINE,HD2DVD,DVD,DVD5,DVD9,HRHDTV,MVCD,VCD,TS,VHSRip,BluRay,HDDVD,D-THEATER,SDTV
