@@ -12,6 +12,7 @@ MovieJukebox 1.6 BETA
   - Fixed defect #1045 Banners not downloaded if Local Poster file exists
   - Enhancement  #1037 Added Norwegian language to filename scanner
   - Fixed defect #1046 With "play full BluRay disks" selected, audio and video details are UNKNOWN
+  - Enhancement  #1048 Ignore special movie versions from filename: "Directors Cut", "Extended Cut" etc.
 
 MovieJukebox 1.5
 ----------------
